web/static/css/home.css
.posts-container {
  display: flex;
  flex-direction:row;
  flex-wrap:wrap;
  justify-content: space-around;
}

.post {
  border-radius:0.5vw;
  text-align:center;
  flex: 0 0 30%;
  max-width: 35vw;
  min-width:35vw;
  max-height: 60vh;
  min-height:60vh;
  overflow: scroll;

  padding-top:3vh;
  padding-bottom:3vh;
  padding-left:1vw;
  padding-right:1vw;

  margin:auto;
  margin-top:2.5vh;
  margin-bottom:2.5vh;

  border-style:solid;
  border-width:0.2vw;
  background-color:#F4F5EF;
}

.post img {
  max-width: 10vw;
  -webkit-clip-path: circle(10vw at center);
  -moz-clip-path: circle(10vw, 100px, 100px);
  clip-path: circle(10vw, 100px, 100px);
  background-color:red;
}

.post img:hover {
  mix-blend-mode:color;
}

.post .title {
  font-family:"ff-enzo-web", Futura, sans-serif;
  text-transform: uppercase;
  letter-spacing: 1em;
  word-spacing: 1em;
  font-size:1em;
  font-weight:900;

  background-color:#191625;

  margin:-1vw;
  margin-top:-1.8vw;
  margin-bottom:2vw;

  border-bottom:solid;
  border-bottom-width: 0.2vw;
}

.post .preview {
  font-family:"pt-sans", Avenir, Helvetica, Arial, sans-serif;
  font-size:1.1em;
}

.post .tag {
  font-family:Futura, Arial, sans-serif;
  padding:0.4vw;
  border-radius:7%;
  margin:0.2vw;
}

